--- a/index.css
+++ b/index.css
@@ -1,14 +1,28 @@
 body{
     margin: 0;
     padding: 0;
+    display: grid;
+    grid-template: 5% 30% 10% 55% / 10% 80% 10%;
+    height: 100%;
 }
 
 #header{
-    background-color: #EAECEE;
-    height: 150px;
+    background-color: #F5CBA7;
+    height: 180px;
+    grid-column: 2 / span 1;
+    grid-row: 2 / span 1;
 }
 
 #header h1{
-    margin: 0;
-    padding: 0;
+    padding: 40px 0 0 0;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    font-size: 0.75in;
+    color: #ffffff;
+}
+
+#information{
+    grid-column: 2 / span 1;
+    grid-row: 4;
 }
