--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
 body{
     margin: 0;
-    padding: 0;
+    padding: 20px 0;
     display: grid;
-    grid-template: 5% 30% 10% 55% / 10% 80% 10%;
+    grid-template: 5% 30% 55% / 5% 80% 5%;
+    grid-gap: 5%;
     height: 100%;
 }
 
@@ -11,6 +12,8 @@ body{
     height: 180px;
     grid-column: 2 / span 1;
     grid-row: 2 / span 1;
+    margin-bottom: 30px;
+    border: 2px solid #E59866;
 }
 
 #header h1{
@@ -24,5 +27,21 @@ body{
 
 #information{
     grid-column: 2 / span 1;
-    grid-row: 4;
+    grid-row: 3 / span 1;
+    background-color: #F8F9F9;
+    padding-left: 200px;
+    height: 350px;
+    padding-top: 20px;
+}
+
+#information h1{
+    font-size: 0.3in;
+}
+
+#information p{
+    font-size: 0.2in;
+}
+
+input{
+    width: 300px;
 }
